[package]
name = "scx_horoscope"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Zampieri"]
license = "GPL-2.0-only"
description = "An astrological sched_ext scheduler - schedules tasks based on planetary positions"
repository = "https://github.com/zampierilucas/scx_horoscope"

[dependencies]
# sched_ext framework
scx_utils = "1.0"
scx_stats = "1.0"
scx_stats_derive = "1.0"
scx_rustland_core = "2.4"

# BPF and system interaction
libbpf-rs = "0.26.0-beta.1"
libc = "0.2"
plain = "0.2.3"

# Astronomy and astrology
astro = "2.0"
chrono = "0.4"

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Logging
log = "0.4"
simplelog = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Signal handling
ctrlc = "3.4"

# Process info
procfs = "0.18"

[build-dependencies]
scx_utils = "1.0"
scx_rustland_core = "2.4"

[dev-dependencies]
# For testing
approx = "0.5"
